# zcarve

./: .gitignore  README.md  pyproject.toml
.windsurf/rules/: poetry.md
zcarve/: __init__.py  dialogs.py  gcode.py  geometry.py  inlay.py  main.py  preview3d.py  toolpaths.py  tools.py
